src/objects/FinanceRecord__c.object
<CustomObject>
    <fullName>FinanceRecord__c</fullName>
    <label>Finance Record</label>
    <pluralLabel>Finance Records</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Record #</label>
        <displayFormat>FIN-{000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>

    <fields>
        <fullName>BankAccount__c</fullName>
        <label>Bank Account</label>
        <type>Text</type>
        <length>34</length>
        <description>Financial account identifier.</description>
    </fields>

    <fields>
        <fullName>CardPAN__c</fullName>
        <label>Card PAN</label>
        <type>Text</type>
        <length>19</length>
        <description>Payment card number.</description>
    </fields>

    <fields>
        <fullName>TaxId__c</fullName>
        <label>Tax ID</label>
        <type>Text</type>
        <length>16</length>
        <description>Tax identifier - sensitive.</description>
    </fields>
</CustomObject>